assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;700;800&display=swap');
@import url('../fonts/Myriad-Pro-Regular.otf')
@font-face {
    font-family: Myriad Pro;
    src: url(../fonts/Myriad-Pro-Regular.otf);
  }

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
.fa {
    font-size: 22px!important;
}
html {
    height: 100%;
}
body {
    background: black;
    color: white;
    font-family: 'Myriad Pro', 'Merriweather Sans', arial, sans-serif!important;
    height: 100%;
}


header {
    width: 100vw;
    height: 100px;
    position: fixed;
    top: 0;
    left: 0;
    background: black;
    z-index: 1;
}
.logo {
    margin: 20px;
    /* width: 50%; */
    display: inline-block;
}
.logo h1 {
    font-size: 38px;
}
.logo h1 a {
    color: white;
    text-decoration: none;
}
nav {
   
    width: 200px;
    height: 100vh;
    background: black;
    position: absolute;
    right: 0; 
    top: 100px;
    transform: translateX(100%); 
    transition: transform .5s ease-in-out;

    
}

.nav-online {
    background: red;
    padding: 10px 15px;
}

nav ul {
    list-style: none;
    
    
}

nav ul li {
    margin: 20px;
}
nav ul li a{
    text-decoration: none;
    color: white;
    font-weight: 700;
    text-transform: uppercase;
    font-size: 16px;
}
.menu-icon {
    width: 30px;
   
    position: absolute;
    right: 0;
    top: 0;
    margin: 30px;
}
.menu-icon img {
    width: 100%;
}

section.hero {
    /* position: relative; */
    margin-top: 100px;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
section.hero img {
    width: 100%;
    height: 483px;
    object-fit: cover;
    /* position:absolute; */
}
section.about-hero, section.contact-hero, section.menu-hero {
    margin-top: 100px;
    background-repeat: no-repeat;
    background-size: cover;
    height: 60vh;
    display: flex;  
    justify-content: center;
    align-items: center;
}

section.about-hero {
    background-image:url("../images/brewhemia-bar-thin-dark.jpg");
   
}

section.about-hero h2, section.contact-hero h2, section.menu-hero h2 {
    font-size: 60px;
}

section.contact-hero {
    background-image:url("../images/brewhemia-interior2.jpg");
}

section.menu-hero {
    background-image:url("../images/menu-hero22.jpg");
}


section.features, .menu, .contact {
    background: white;

}

section.menu {
   padding: 100px;
}
.features-container {
    width: 90%;
    margin: auto;
    padding: 50px 0;
    display: flex;
    justify-content: space-around;
}
.feature {
    margin: 10px;
    
    /* position: relative; */
    display: flex;
    justify-content: center;
    align-items: center;
    
}
.feature img {
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}
.feature h2 {
    position: absolute;
    text-align: center;
    
}
.feature h2 a {
    color: white;
    text-decoration: none;
}
section.tagline {
    padding: 20px;
}
section.tagline p{
    text-align:center;
    font-size:22px;
    font-weight: bold;
}

section.about {
    background: white;
}

footer {
    background: #232323;
   
    font-weight: bold;
    width: 100vw;
}
footer h3 {
    text-align: center;
    border-bottom: 2px solid white;
    font-size: 18px;
    font-weight: 800;
}
footer p {
    margin: 16px;
    font-size: 16px;
}
footer a {
    color: white;
    text-decoration: none;
}
.hours, .connect, .address {
    margin: 40px auto;
    padding: 20px;
    
}


.hour {
    display: flex;  
    justify-content: space-between;
    margin: 10px 0;
}
 .online {
    display: block;
    color: white;
    text-decoration: none;
    background: red;
    padding: 10px 20px;
    margin: 45px auto 15px auto;    
    width: 200px;
    text-align: center;
    
}
.address a {
    color: white;
    text-decoration: none;
}
.copyright p {
    font-weight: normal; 
    text-align: center;
}


/* DESKTOP STYLES */

@media screen and (min-width: 768px) {

 .container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    /* min-width: 728px;
    max-width: 1200px; */
    width: 900px;
    margin: auto;
}
.about-inner {
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin: 50px;
}
.about-inner p, .contact-inner p, .contact-inner h3 {
    margin: 40px;
    color: black;
}
 .contact-inner h3 {
     border-bottom: 1px solid black;
     padding-bottom: 15px;
 }
   
.menu-icon {
    display: none;
    z-index: 0;
}
header {
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo {
    z-index: 2;
}
nav {
    transform: translate(0);
    /* width: 75%; */
    height: 100px;
    background: transparent;
    display: flex;
    justify-content: center;
    background: black;
    z-index: 1;
    min-width: 550px;
    position: static;
}
nav ul {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    
}
.footer-section {
    width: 33%;
}

}
@media screen and (min-width: 1380px) {
   
}

